# ui-test-20260303-v1

./: package-lock.json  package.json  pyproject.toml
.github/prompts/: run_code_generator.md
.github/workflows/: run_evaluation.yml  run_full_experiment.yml  run_trial_experiment.yml
.research/: research_history.json
.research/latex/mdpi/: main.tex  references.bib
config/: config.yaml
config/run/: comparative-0-direct-gsm8k.yaml  comparative-1-fixed-cot-gsm8k.yaml  comparative-2-ca-cot-gsm8k.yaml  proposed-ea-cot-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
